shared/src/test/data/yeast/invalid-json/unquoted-keyword-like.jyt
BeginDocument       0,  1,  0 ''
BeginNode           0,  1,  0 ''
BeginMapping        0,  1,  0 ''
Indicator           0,  1,  0 '{'
LineBreak           1,  1,  1 '\n'
WhiteSpace          2,  2,  0 '  '
BeginPair           4,  2,  2 ''
BeginNode           4,  2,  2 ''
BeginScalar         4,  2,  2 ''
Error               4,  2,  2 't'
Text                4,  2,  2 't'
EndScalar           5,  2,  3 ''
EndNode             5,  2,  3 ''
Indicator           5,  2,  3 ':'
WhiteSpace          6,  2,  4 ' '
BeginNode           7,  2,  5 ''
BeginScalar         7,  2,  5 ''
Error               7,  2,  5 'a\n'
Text                7,  2,  5 'a\n'
EndScalar           9,  3,  0 ''
EndNode             9,  3,  0 ''
EndPair             9,  3,  0 ''
Indicator           9,  3,  0 '}'
EndMapping         10,  3,  1 ''
EndNode            10,  3,  1 ''
EndDocument        10,  3,  1 ''
